integration_tests/codegen_fail/fail/scalar/derive_multiple_unnamed_fields_with_resolver.rs
use juniper::{GraphQLScalar, Value};

#[derive(GraphQLScalar)]
#[graphql(to_output_with = Self::to_output)]
struct Scalar(i32, i32);

impl Scalar {
    fn to_output(&self) -> Value {
        Value::scalar(self.0)
    }
}

fn main() {}
